--- a/test_autolens/unit/test_files/config/priors/default/core.ini
+++ b/test_autolens/unit/test_files/config/priors/default/core.ini
@@ -1,9 +1,11 @@
 [FLRW]
-H0=g,0,1
-Om0=g,0,1
-Ode0=g,0,1
-Tcmb0=g,0,1
-Neff=g,0,1
-m_nu=g,0,1
-Ob0=g,0,1
+H0=g,1,1
+Om0=g,1,1
+Ode0=g,1,1
+Tcmb0=g,1,1
+Neff=g,1,1
+m_nu=g,1,1
+Ob0=g,1,1
 name=n
+[wCDM]
+w0=g,1,1
